# xsltproc-py-lite

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
xsltproc_py_lite/: xsltproc_py.py
