[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xsltproc-py-lite"
version = "0.1.2"
description = "A lightweight Python+lxml implementation of xsltproc with limited features"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Takaaki AOKI", email = "aoki.takaaki@gmail.com" }
]
dependencies = [
    "lxml"
]

[project.scripts]
xsltproc-py = "xsltproc_py_lite.xsltproc_py:main"
